--- a/codigo/Landingpage/index.css
+++ b/codigo/Landingpage/index.css
@@ -4,7 +4,8 @@
     font-weight: normal;
     font-style: normal;
 }
-body{
+
+body {
     margin: 0%;
     background-color: rgb(224, 224, 224);
     display: flex;
@@ -12,24 +13,28 @@ body{
     justify-content: center;
     flex-direction: column;
 }
-h1{
+
+h1 {
     font-family: 'Dicipullus';
     text-align: center;
-    color: #111f4d  ;
+    color: #111f4d;
 }
-p{
+
+p {
     font-family: Arial, Helvetica, sans-serif;
     font-size: larger;
     text-align: justify;
 }
+
 /*
 Navbar
 */
-#imgnav{
+#imgnav {
     width: 4rem;
     margin: 0.75rem;
 }
-#btnnav{
+
+#btnnav {
     font-family: 'Dicipullus';
     margin-right: 2rem;
     width: 4rem;
@@ -41,32 +46,45 @@ Navbar
     border-color: #182c6d;
     font-size: larger;
 }
-#btnnav:hover{
+
+#btnnav:hover {
     text-decoration: underline;
 }
-.nav{
+
+.nav {
     width: 100%;
     background-color: #182c6d;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    position: sticky;
+    top: 0%;
 }
+
 /*
 Article
 */
-#imgbanner{
+.banner {
     width: 100%;
-    height: 30%;
-    
+    background-image: url(./img/Cópia\ de\ Dicipullus.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
 }
-.article{
+
+#banner {
+    font-size: 3rem;
+    color: white;
+}
+
+.article {
     padding: 1.7rem;
-    
 }
+
 /*
 Button
 */
-#btnComeceAgora{
+#btnComeceAgora {
     width: 10rem;
     height: 4rem;
     background-color: #182c6d;
@@ -78,7 +96,75 @@ Button
     font-family: 'Dicipullus';
     margin: 1rem;
 }
-#btnComeceAgora:hover{
-border-color: white;
+
+#btnComeceAgora:hover {
+    border-color: white;
+}
+
+/*
+Responsividade
+*/
+@media screen and (min-width:768px) {
+    p {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: larger;
+        text-align: justify;
+        width: 50%;
+    }
+/*
+Navbar
+*/
+#imgnav {
+    width: 6rem;
+    margin: 1rem;
+}
+
+#btnnav {
+    font-family: 'Dicipullus';
+    margin-right: 2rem;
+    width: 8rem;
+    height: 3.5rem;
+    background-color: #182c6d;
+    color: white;
+    font-size: 2.5rem;
+    border: solid 0.1rem;
+    border-color: #182c6d;
+}
+
+#btnnav:hover {
+    text-decoration: underline;
+}
+
+.nav {
+    width: 100%;
+    background-color: #182c6d;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+
+/*
+Article
+*/
+    .article {
+        padding: 1.7rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .banner {
+        width: 100%;
+        background-image: url(./img/Cópia\ de\ Dicipullus.jpg);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: 100%;
+    }
+
+    #banner {
+        font-size: 10rem;
+        color: white;
+    }
 
 }
