--- a/codigo/Loginpage/loginPage.css
+++ b/codigo/Loginpage/loginPage.css
@@ -1,3 +1,77 @@
+@font-face {
+    font-family: 'Dicipullus';
+    src: url('./font/URIAL\ FONT.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
 body{
     background-color: lightgreen;
+    margin:0;
+}
+/*
+Navbar
+*/
+#imgnav {
+    width: 4rem;
+    margin: 0.75rem;
+}
+
+#btnnav {
+    font-family: 'Dicipullus';
+    margin-right: 2rem;
+    width: 4rem;
+    height: 2.5rem;
+    background-color: #182c6d;
+    color: white;
+    font-size: larger;
+    border: solid 0.1rem;
+    border-color: #182c6d;
+    font-size: larger;
+}
+
+#btnnav:hover {
+    text-decoration: underline;
+}
+
+.nav {
+    width: 100%;
+    background-color: #182c6d;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: sticky;
+    top: 0%;
+}
+@media screen and (min-width:768px) {
+/*
+Navbar
+*/
+#imgnav {
+    width: 6rem;
+    margin: 1rem;
+}
+
+#btnnav {
+    font-family: 'Dicipullus';
+    margin-right: 2rem;
+    width: 8rem;
+    height: 3.5rem;
+    background-color: #182c6d;
+    color: white;
+    font-size: 2.5rem;
+    border: solid 0.1rem;
+    border-color: #182c6d;
+}
+
+#btnnav:hover {
+    text-decoration: underline;
+}
+
+.nav {
+    width: 100%;
+    background-color: #182c6d;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
 }
