uniao dos fluxos

--- a/codigo/utils/css.css
+++ b/codigo/utils/css.css
@@ -12,6 +12,20 @@ main{
     justify-content: center;
     align-items: center;
 }
+
+
+
+
+/* .avancar{
+    height: 2.5rem;
+    border: none;   
+    border-radius: 10px;
+    color: aliceblue;
+    background-color: #182c6d;
+    position: fixed;
+    right: 7px;
+    bottom: 29px;
+} */
 /*
 Navbar
 */
