--- a/codigo/C-Estagiario/C-EstagiarioIII/style.css
+++ b/codigo/C-Estagiario/C-EstagiarioIII/style.css
@@ -11,8 +11,9 @@ body {
 }
 
 main {
+    margin: 0px !important;
+
     width: 100%;
-    height: 70vh;
     background-color: rgb(247, 247, 247);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
