--- a/codigo/C-Estagiario/style.css
+++ b/codigo/C-Estagiario/style.css
@@ -1,6 +1,4 @@
 html {
-    max-width: 950px;
-    margin: auto;
     background-color: rgb(247, 247, 247);
 }
 
@@ -9,8 +7,8 @@ body {
 }
 
 main {
+    margin: 0px !important;
     width: 100%;
-    height: 70vh;
     background-color: rgb(247, 247, 247);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -38,7 +36,6 @@ input:focus {
 }
 
 .formulario {
-    margin-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -56,6 +53,7 @@ input:focus {
     background-color: rgb(218, 218, 218);
     width: 100%;
     height: 35rem;
+    
 }
 
 @media only screen and (min-width: 950px) {
@@ -63,7 +61,6 @@ input:focus {
 
     main {
         margin-top: 2rem;
-
         display: flex;
         justify-content: center;
         align-items: center;
