--- a/codigo/cardSelectpage/style.css
+++ b/codigo/cardSelectpage/style.css
@@ -16,6 +16,7 @@ main {
 }
 
 .card {
+    cursor: pointer;
     -webkit-box-shadow: 0px 14px 30px 12px rgba(199, 199, 199, 0.82);
     box-shadow: 0px 14px 30px 12px rgba(199, 199, 199, 0.82);
     background-image: url("../images/curto.png");
