--- a/codigo/craicaVagas/index.css
+++ b/codigo/craicaVagas/index.css
@@ -1,1 +1,24 @@
-    
+.Novavaga{
+    color: rgb(61, 61, 185);
+    text-align: center;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    font-size: 125%;
+
+}
+body{
+    background-color: #a8a8a8;
+}
+.modal-footer{
+    background-color: #a8a8a8;
+}
+.modal-header{
+    background-color: #a8a8a8;
+}
+.modal-title{
+    font-size: 200%;
+}
+.nova-vaga{
+    font-size: 105%;
+}
+
