--- a/codigo/cardSelectpage/style.css
+++ b/codigo/cardSelectpage/style.css
@@ -1,18 +1,57 @@
 html {
     height: 100%;
-    max-width: 950px;
-    margin: auto;
+    margin: -8px !important;
 }
 
 main {
-    padding-top: 30px;
-    padding: 4.5rem 10px 10px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.container {
+    padding-top: 40px;
+    max-width: 950px;
+    width: 100%;
     height: 70vh;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     flex-direction: column;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+#imgnav {
+    width: 4rem;
+    margin: 0.75rem;
+}
+
+#btnnav {
+    font-family: 'Dicipullus';
+    margin-right: 2rem;
+    width: 4rem;
+    height: 2.5rem;
+    background-color: #182c6d;
+    color: white;
+    font-size: larger;
+    border: solid 0.1rem;
+    border-color: #182c6d;
+    font-size: larger;
+}
+
+#btnnav:hover {
+    text-decoration: underline;
+}
+
+.nav {
+    width: 100%;
+    background-color: #182c6d;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: sticky;
+    top: 0%;
 }
 
 .card {
@@ -62,10 +101,19 @@ main {
 }
 
 @media only screen and (min-width: 708px) {
-    main {
-        flex-direction: row;
-        justify-content: space-around;
+    html {
+        margin: -8px !important;
+    }
 
+    main {
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .container {
+        padding-top: 40px;
+        height: 100%;
+        flex-direction: row;
     }
 
     #e {
