--- a/codigo/C-Estagiario/C-EstagiarioIII/style.css
+++ b/codigo/C-Estagiario/C-EstagiarioIII/style.css
@@ -1,4 +1,8 @@
+@import url('../../../node_modules/bootstrap-icons/font/bootstrap-icons.css');
+
 html {
+    max-width: 950px;
+    margin: auto;
     background-color: rgb(247, 247, 247);
 }
 
@@ -8,27 +12,57 @@ body {
 
 main {
     margin: 0px !important;
+
     width: 100%;
     background-color: rgb(247, 247, 247);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 input {
-    margin: 10px;
+    width: 100%;
     margin-top: 1.5rem;
     height: 2rem;
     border: none;
     border-bottom: 1px solid;
     background: transparent;
-}
+} 
 
 textarea:focus,
 input:focus {
     outline: none;
 }
 
+.btn{
+    border: none;
+    background: none;
+}
+
+#addIcon{
+    color: #182c6d;
+}
+
+
+.position {
+    margin-right: 1rem;
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+}
+
+.send {
+    background-color: #182c6d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    height: 3rem;
+    width: 6rem;
+    font-weight: bold;
+}
+
 .card {
-    background-image: url("../images/curto.png");
+    background-image: url("../../images/curto.png");
     background-repeat: no-repeat;
     height: 10rem;
     width: 100%;
@@ -36,6 +70,7 @@ input:focus {
 }
 
 .formulario {
+    margin-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -53,7 +88,39 @@ input:focus {
     background-color: rgb(218, 218, 218);
     width: 100%;
     height: 35rem;
-    
+}
+
+.add{
+    width: 80%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: none;
+    border-bottom: 1px solid black;
+}
+
+.formularioI{
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    flex-direction: column;
+    visibility: hidden;
+}
+
+#andamento{
+    width: 30px;
+    margin: 0px;
+    margin-right: 10px;
+}
+
+.ck-box{
+    margin-top: 10px;
+    width: 100%;
+    display: flex;
+    justify-content: start;
+    align-items: center;
+    flex-direction: row;
 }
 
 @media only screen and (min-width: 950px) {
@@ -61,6 +128,7 @@ input:focus {
 
     main {
         margin-top: 2rem;
+
         display: flex;
         justify-content: center;
         align-items: center;
@@ -70,7 +138,7 @@ input:focus {
     .card {
         -webkit-box-shadow: 0px 0px 23px -2px #828282;
         box-shadow: 0px 0px 23px -2px #828282;
-        background-image: url("../images/pp.png");
+        background-image: url("../../images/pp.png");
         background-repeat: no-repeat;
         height: 30rem;
         width: 30rem;
@@ -82,6 +150,8 @@ input:focus {
         padding-right: 20px;
 
     }
+
+
 
     .forms {
         height: 30rem;
