--- a/codigo/Cadastro/C-Empresa/css.css
+++ b/codigo/Cadastro/C-Empresa/css.css
@@ -55,6 +55,23 @@ input:focus {
     height: 35rem;
     
 }
+.checkbox{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.checkboxlbl{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.chk{
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-bottom: 1.3rem;
+}
 
 @media only screen and (min-width: 950px) {
 
@@ -70,7 +87,7 @@ input:focus {
     .card {
         -webkit-box-shadow: 0px 0px 23px -2px #828282;
         box-shadow: 0px 0px 23px -2px #828282;
-        background-image: url("../images/pp.png");
+        background-image: url("../images/empresa.png");
         background-repeat: no-repeat;
         height: 30rem;
         width: 30rem;
@@ -96,5 +113,12 @@ input:focus {
 
     .position {
         margin-top: 4rem;
+    }
+    .checkbox{
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        align-content: space-around;
+
     }
 }
