--- a/codigo/C-Estagiario/style.css
+++ b/codigo/C-Estagiario/style.css
@@ -1,4 +1,6 @@
 html {
+    max-width: 950px;
+    margin: auto;
     background-color: rgb(247, 247, 247);
 }
 
@@ -7,8 +9,8 @@ body {
 }
 
 main {
-    margin: 0px !important;
     width: 100%;
+    height: 70vh;
     background-color: rgb(247, 247, 247);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
@@ -27,6 +29,28 @@ input:focus {
     outline: none;
 }
 
+
+
+
+.position {
+    margin-right: 1rem;
+    width: 100%;
+    height: 5rem;
+    display: flex;
+    justify-content: end;
+    align-items: flex-end;
+}
+
+.send {
+    background-color: #182c6d;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    height: 3rem;
+    width: 6rem;
+    font-weight: bold;
+}
+
 .card {
     background-image: url("../images/curto.png");
     background-repeat: no-repeat;
@@ -36,6 +60,7 @@ input:focus {
 }
 
 .formulario {
+    margin-top: 2rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -53,7 +78,6 @@ input:focus {
     background-color: rgb(218, 218, 218);
     width: 100%;
     height: 35rem;
-    
 }
 
 @media only screen and (min-width: 950px) {
@@ -61,6 +85,7 @@ input:focus {
 
     main {
         margin-top: 2rem;
+
         display: flex;
         justify-content: center;
         align-items: center;
