--- a/codigo/vagas_estagiario/style.css
+++ b/codigo/vagas_estagiario/style.css
@@ -77,6 +77,42 @@ body{
     .card-body{
       margin-bottom: 30%;
     }
+
+    #imgnav {
+      width: 4rem;
+      margin: 0.75rem;
+  }
+  
+  #btnnav {
+      font-family: 'Dicipullus';
+      margin-right: 2rem;
+      width: 4rem;
+      height: 2.5rem;
+      background-color: #182c6d;
+      color: white;
+      font-size: larger;
+      border: solid 0.1rem;
+      border-color: #182c6d;
+      font-size: larger;
+  }
+  
+  #btnnav:hover {
+      text-decoration: underline;
+  }
+  
+  .nav {
+      width: 100%;
+      background-color: #182c6d;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      position: sticky;
+      top: 0%;
+      z-index: 2;
+      -webkit-box-shadow: 0px 13px 20px -1px #0000005e; 
+      box-shadow: 0px 13px 20px -1px #0000005e;
+  }
+  
     
     
     
