--- a/codigo/listar_empresas/style.css
+++ b/codigo/listar_empresas/style.css
@@ -108,6 +108,12 @@ body{
       justify-content: space-between;
       position: sticky;
       top: 0%;
+      z-index: 999;
+  }
+  
+  .container:first-child{
+    background-color: red;
+    color: white;
   }
   
     
