--- a/codigo/C-Estagiario/style.css
+++ b/codigo/C-Estagiario/style.css
@@ -4,13 +4,22 @@ html {
 
 body {
     margin: 0px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(247, 247, 247);
+
 }
+
 
 main {
     margin: 0px !important;
+    max-width: 950px;
     width: 100%;
     background-color: rgb(247, 247, 247);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 input {
@@ -20,6 +29,38 @@ input {
     border: none;
     border-bottom: 1px solid;
     background: transparent;
+}
+
+#imgnav {
+    width: 4rem;
+    margin: 0.75rem;
+}
+
+#btnnav {
+    font-family: 'Dicipullus';
+    margin-right: 2rem;
+    width: 4rem;
+    height: 2.5rem;
+    background-color: #182c6d;
+    color: white;
+    font-size: larger;
+    border: solid 0.1rem;
+    border-color: #182c6d;
+    font-size: larger;
+}
+
+#btnnav:hover {
+    text-decoration: underline;
+}
+
+.nav {
+    width: 100%;
+    background-color: #182c6d;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: sticky;
+    top: 0%;
 }
 
 textarea:focus,
@@ -53,8 +94,27 @@ input:focus {
     background-color: rgb(218, 218, 218);
     width: 100%;
     height: 35rem;
-    
+    margin-top: 5rem;
 }
+
+.avancar {
+    margin-top: 2rem;
+    transition: all .2s ease-out;
+    height: 40px;
+    width: 8rem;
+    border: none;
+    background-color: #182c6d;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.avancar:hover{
+    background-color: #1b3792;
+    width: 8.5rem;
+    transition: all .2s ease-out;
+}
+
 
 @media only screen and (min-width: 950px) {
 
