--- a/codigo/C-Estagiario/C-EstagiarioII/style.css
+++ b/codigo/C-Estagiario/C-EstagiarioII/style.css
@@ -1,13 +1,10 @@
 @import url('../../../node_modules/bootstrap-icons/font/bootstrap-icons.css');
 
-html {
-    max-width: 950px;
-    margin: auto;
-    background-color: rgb(247, 247, 247);
-}
-
 body {
     margin: 0px !important;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 main {
@@ -15,6 +12,8 @@ main {
     width: 100%;
     background-color: rgb(247, 247, 247);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    max-width: 950px;
+    margin: auto;
 }
 
 input {
@@ -92,7 +91,7 @@ input:focus {
     width: 80%;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
     flex-direction: column;
     visibility: hidden;
 }
@@ -127,23 +126,6 @@ input:focus {
     margin: 0.75rem;
 }
 
-#btnnav {
-    font-family: 'Dicipullus';
-    margin-right: 2rem;
-    width: 4rem;
-    height: 2.5rem;
-    background-color: #182c6d;
-    color: white;
-    font-size: larger;
-    border: solid 0.1rem;
-    border-color: #182c6d;
-    font-size: larger;
-}
-
-#btnnav:hover {
-    text-decoration: underline;
-}
-
 .nav {
     width: 100%;
     background-color: #182c6d;
@@ -153,7 +135,23 @@ input:focus {
     position: sticky;
     top: 0%;
 }
+.avancar{
+margin-top: 2rem;
+transition: all .2s ease-out;
+height: 40px;
+width: 8rem;
+border: none;
+background-color: #182c6d;
+color: white;
+border-radius: 5px;
+cursor: pointer;
+}
 
+.avancar:hover{
+background-color: #1b3792;
+width: 8.5rem;
+transition: all .2s ease-out;
+}
 @media only screen and (min-width: 950px) {
 
 
@@ -197,5 +195,8 @@ input:focus {
 
     .position {
         margin-top: 4rem;
+    }
+    .nav{
+        margin-bottom: 5rem;
     }
 }
