--- a/codigo/C-Estagiario/C-EstagiarioIII/style.css
+++ b/codigo/C-Estagiario/C-EstagiarioIII/style.css
@@ -1,21 +1,27 @@
 @import url('../../../node_modules/bootstrap-icons/font/bootstrap-icons.css');
 
 html {
-    max-width: 950px;
-    margin: auto;
     background-color: rgb(247, 247, 247);
 }
 
 body {
     margin: 0px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(247, 247, 247);
+
 }
+
 
 main {
     margin: 0px !important;
-
+    max-width: 950px;
     width: 100%;
     background-color: rgb(247, 247, 247);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+
 }
 
 input {
@@ -58,6 +64,24 @@ input {
     justify-content: space-between;
     position: sticky;
     top: 0%;
+}
+
+.avancar {
+    margin-top: 2rem;
+    transition: all .2s ease-out;
+    height: 40px;
+    width: 8rem;
+    border: none;
+    background-color: #182c6d;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.avancar:hover{
+    background-color: #1b3792;
+    width: 8.5rem;
+    transition: all .2s ease-out;
 }
 
 
@@ -122,6 +146,8 @@ input:focus {
     background-color: rgb(218, 218, 218);
     width: 100%;
     height: 35rem;
+    align-items: center;
+    margin-top: 5rem;
 }
 
 .add{
