--- a/codigo/C-Estagiario/C-EstagiarioIV/style.css
+++ b/codigo/C-Estagiario/C-EstagiarioIV/style.css
@@ -1,22 +1,27 @@
 @import url('../../../node_modules/bootstrap-icons/font/bootstrap-icons.css');
-
 html {
-    max-width: 950px;
-    margin: auto;
     background-color: rgb(247, 247, 247);
 }
 
 body {
     margin: 0px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(247, 247, 247);
+
 }
+
 
 main {
     margin: 0px !important;
+    max-width: 950px;
     width: 100%;
     background-color: rgb(247, 247, 247);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
 
+}
 input {
     width: 100%;
     margin-top: 1.5rem;
@@ -30,6 +35,25 @@ textarea:focus,
 input:focus {
     outline: none;
 }
+
+.avancar {
+    margin-top: 2rem;
+    transition: all .2s ease-out;
+    height: 40px;
+    width: 8rem;
+    border: none;
+    background-color: #182c6d;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.avancar:hover{
+    background-color: #1b3792;
+    width: 8.5rem;
+    transition: all .2s ease-out;
+}
+
 
 .position {
     margin-right: 1rem;
@@ -74,6 +98,7 @@ input:focus {
 
 
 .forms {
+    margin-top: 5rem;
     background-color: rgb(218, 218, 218);
     width: 100%;
     height: 35rem;
