--- a/codigo/Cadastro/C-Empresa/C-EmpresaII/css.css
+++ b/codigo/Cadastro/C-Empresa/C-EmpresaII/css.css
@@ -4,15 +4,23 @@ html {
 
 body {
     margin: 0px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(247, 247, 247);
+
 }
+
 
 main {
     margin: 0px !important;
+    max-width: 950px;
     width: 100%;
     background-color: rgb(247, 247, 247);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
 
+}
 input {
     margin: 10px;
     margin-top: 1.5rem;
@@ -20,6 +28,38 @@ input {
     border: none;
     border-bottom: 1px solid;
     background: transparent;
+}
+
+#imgnav {
+    width: 4rem;
+    margin: 0.75rem;
+}
+
+#btnnav {
+    font-family: 'Dicipullus';
+    margin-right: 2rem;
+    width: 4rem;
+    height: 2.5rem;
+    background-color: #182c6d;
+    color: white;
+    font-size: larger;
+    border: solid 0.1rem;
+    border-color: #182c6d;
+    font-size: larger;
+}
+
+#btnnav:hover {
+    text-decoration: underline;
+}
+
+.nav {
+    width: 100%;
+    background-color: #182c6d;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: sticky;
+    top: 0%;
 }
 
 textarea:focus,
@@ -50,6 +90,7 @@ input:focus {
 
 
 .forms {
+    margin-top: 5rem;
     background-color: rgb(218, 218, 218);
     width: 100%;
     height: 35rem;
