--- a/codigo/LoginPage/style.css
+++ b/codigo/LoginPage/style.css
@@ -4,13 +4,23 @@ html {
 
 body {
     margin: 0px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgb(247, 247, 247);
+
 }
+
 
 main {
     margin: 0px !important;
+    max-width: 950px;
     width: 100%;
     background-color: rgb(247, 247, 247);
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    
+
 }
 
 input {
@@ -22,14 +32,60 @@ input {
     background: transparent;
 }
 
+#imgnav {
+    width: 4rem;
+    margin: 0.75rem;
+}
+
+#btnnav {
+    font-family: 'Dicipullus';
+    margin-right: 2rem;
+    width: 4rem;
+    height: 2.5rem;
+    background-color: #182c6d;
+    color: white;
+    font-size: larger;
+    border: solid 0.1rem;
+    border-color: #182c6d;
+    font-size: larger;
+}
+
+#btnnav:hover {
+    text-decoration: underline;
+}
+
+.nav {
+    width: 100%;
+    background-color: #182c6d;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: sticky;
+    top: 0%;
+}
+
+
 textarea:focus,
 input:focus {
     outline: none;
 }
 
+.avancar {
+    margin-top: 2rem;
+    transition: all .2s ease-out;
+    height: 40px;
+    width: 8rem;
+    border: none;
+    background-color: #182c6d;
+    color: white;
+    border-radius: 5px;
+    cursor: pointer;
+}
 
-.avancarbtn{
-    margin-top: 30px;
+.avancar:hover{
+    background-color: #1b3792;
+    width: 8.5rem;
+    transition: all .2s ease-out;
 }
 
 .card {
@@ -41,6 +97,7 @@ input:focus {
 }
 
 .formulario {
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -48,6 +105,7 @@ input:focus {
 }
 
 .cetor {
+    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -58,7 +116,6 @@ input:focus {
     background-color: rgb(218, 218, 218);
     width: 100%;
     height: 35rem;
-    
 }
 
 
