--- a/codigo/LoginPage/style.css
+++ b/codigo/LoginPage/style.css
@@ -62,6 +62,7 @@ input {
     justify-content: space-between;
     position: sticky;
     top: 0%;
+    margin-bottom: 5rem;
 }
 
 
@@ -88,7 +89,7 @@ input:focus {
     transition: all .2s ease-out;
 }
 
-.card {
+.card{
     background-image: url("../images/curto.png");
     background-repeat: no-repeat;
     height: 10rem;
