--- a/codigo/listar_empresas/style.css
+++ b/codigo/listar_empresas/style.css
@@ -126,3 +126,47 @@ body {
   margin-left: auto;
   margin-right: auto;
 }
+
+
+/* modal */
+.Novavaga{
+  margin-top: 5%;
+  margin-bottom: 5%;
+  font-size: 125%;
+  border-radius: 6px;
+  display: flex;
+  align-items: center;
+  align-content: center;
+  flex-direction: column;
+
+}
+
+.modal-footer{
+  background-color: #182c6d;
+}
+.modal-header{    
+  background-color: #182c6d;
+  color: white;       
+}
+.modal-title{
+  font-size: 200%;
+}
+.nova-vaga{
+  font-size: 100%;
+}
+.txt{
+  border:none; 
+  border-bottom: 2px solid #182c6d;    
+  outline: none;
+  margin-bottom: 1.3rem;
+}
+.modal-content{
+  background-color: #a8a8a8;
+}
+.boxCheckbox{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 1.3rem;
+
+}
