--- a/codigo/cardSelectpage/style.css
+++ b/codigo/cardSelectpage/style.css
@@ -1,18 +1,28 @@
+@font-face {
+    font-family: 'Dicipullus';
+    src: url('../Landingpage/font/URIAL\ FONT.ttf');
+    font-weight: normal;
+    font-style: normal;
+}
+body{
+    margin: 0%;
+}
 html {
     height: 100%;
-    margin: -8px !important;
 }
 
 main {
+    width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    font-family: Arial, Helvetica, sans-serif;
 }
-
+h1{
+    font-family: 'Dicipullus';
+}
 .container {
-    padding-top: 40px;
-    max-width: 950px;
     width: 100%;
     height: 70vh;
     display: flex;
@@ -70,8 +80,8 @@ main {
     justify-content: start;
     align-items: flex-end;
     flex-direction: column;
-    padding-right: 20px;
     transition: box-shadow 0.5s;
+    width: 90%;
 
 }
 
@@ -85,6 +95,7 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-right: 1rem;
 }
 
 #estagio {
@@ -101,10 +112,6 @@ main {
 }
 
 @media only screen and (min-width: 708px) {
-    html {
-        margin: -8px !important;
-    }
-
     main {
         flex-direction: column;
         justify-content: space-around;
@@ -112,6 +119,7 @@ main {
 
     .container {
         padding-top: 40px;
+        max-width: 950px;
         height: 100%;
         flex-direction: row;
     }
