--- a/codigo/LoginPage/style.css
+++ b/codigo/LoginPage/style.css
@@ -98,7 +98,6 @@ input:focus {
 }
 
 .formulario {
-    
     display: flex;
     justify-content: center;
     align-items: center;
@@ -117,6 +116,9 @@ input:focus {
     background-color: rgb(218, 218, 218);
     width: 100%;
     height: 35rem;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 
