--- a/codigo/vagas_estagiario/style.css
+++ b/codigo/vagas_estagiario/style.css
@@ -1,87 +1,10 @@
-html {
-  background-color: rgb(238, 240, 242);
+body {
+  margin: 0%;
   display: flex;
-  justify-content: center;
   align-items: center;
-  flex-direction: row;
+  flex-direction: column;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-body {
-  width: 100%;
-}
-
-.grid {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: row;
-  background-color: brown;
-}
-
-.row {
-  display: flex;
-  flex-direction: row;
-}
-
-#daniel {
-  display: grid;
-  grid-template-columns: 450px 450px;
-  grid-row: auto auto;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  justify-content: center;
-}
-#allvagas {
-  display: grid;
-  grid-template-columns: 450px 450px;
-  grid-row: auto auto;
-  grid-column-gap: 20px;
-  grid-row-gap: 20px;
-  justify-content: center;
-}
-
-#main {
-  color: white;
-  background-image: linear-gradient(#182c6d 30%, white);
-  text-align: center;
-  margin-top: 2.5%;
-  width: 350px;
-  height: 600px;
-  border-radius: 15px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  margin-bottom: 30px;
-  cursor: pointer;
-  transition: 0.07s;
-
-  -webkit-box-shadow: 0px 2px 50px 8px rgba(0, 0, 0, 0.56);
-  box-shadow: 0px 2px 50px 8px rgba(0, 0, 0, 0.56);
-}
-
-#main:hover {
-  transition: 0.07s;
-  width: 360px;
-  height: 610px;
-}
-
-#container2 {
-  color: #182c6d;
-  margin: 2px;
-  border-bottom-left-radius: 15px;
-  border-bottom-right-radius: 15px;
-}
-
-#title {
-  font-size: 2.5rem;
-  margin-top: 80px;
-  margin-bottom: 80px;
-}
-
 #imgnav {
   width: 4rem;
   margin: 0.75rem;
@@ -112,18 +35,62 @@ body {
   justify-content: space-between;
   position: sticky;
   top: 0%;
-  padding-right: 20px;
 }
-
-.vagarecomendada {
-  color: white;
+.body{
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  background: linear-gradient(to bottom, #dbdbdb, #000b23);
+}
+.titulo{
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+  width: 80%;
   background-color: #182c6d;
   text-align: center;
-  margin-bottom: 0%;
-  margin-top: 2.5%;
-  width: 40%;
-  border-radius: 15px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  color: white;
+  border-radius: 5rem;
+}
+.containerCard{
+  background-image: linear-gradient(#182c6d 5%, white);
+  width: 100%;
+  height: 19rem;
+  border-radius: 3rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-bottom: 2rem;
+}
+.titleh1{
+  color: white;
+}
+#main{
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+#container2{
+  width: 80%;
+}
+@media screen and (min-width:768px) {
+  .body{
+    width: 100%;
+    background: linear-gradient(to bottom, #dbdbdb, #000b23);
+  }
+  .container{
+    width: 100%;
+  }
+  .caixas{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: row wrap;
+  }
+  .containerCard{
+    margin: 2rem;
+    width: 30%;
+  }
 }
