--- a/codigo/MAIS_INFO_VAGA/style.css
+++ b/codigo/MAIS_INFO_VAGA/style.css
@@ -1,6 +1,7 @@
 .container{
-    justify-content: center;
     display: flex;
+    flex-direction: row;
+    justify-content: center;
 }
 .caixa{
     align-items: center;
