--- a/codigo/vagas_estagiario/style.css
+++ b/codigo/vagas_estagiario/style.css
@@ -61,7 +61,17 @@ body {
   align-items: center;
   flex-direction: column;
   margin-bottom: 2rem;
+  transition: 0.8s;
+
 }
+
+.containerCard:hover{
+  -webkit-box-shadow: 2px -1px 32px -2px rgba(0,0,0,0.53); 
+  box-shadow: 2px -1px 32px -2px rgba(0,0,0,0.53);
+  height: 20rem;
+  transition: 0.8s;
+}
+
 .titleh1{
   color: white;
 }
