--- a/codigo/vagas_estagiario/style.css
+++ b/codigo/vagas_estagiario/style.css
@@ -55,22 +55,23 @@ body {
 .containerCard{
   background-image: linear-gradient(#182c6d 5%, white);
   width: 100%;
-  height: 19rem;
+  height: 22rem;
   border-radius: 3rem;
   display: flex;
   align-items: center;
   flex-direction: column;
   margin-bottom: 2rem;
-  transition: 0.8s;
 
 }
 
-.containerCard:hover{
-  -webkit-box-shadow: 2px -1px 32px -2px rgba(0,0,0,0.53); 
-  box-shadow: 2px -1px 32px -2px rgba(0,0,0,0.53);
-  height: 20rem;
-  transition: 0.8s;
+button{
+  height: 2.2rem;
+  color: white;
+  border: none;
+  background-color: #182c6d;
 }
+
+
 
 .titleh1{
   color: white;
